<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingVertical="20dp"
    android:orientation="vertical"
    android:gravity="top"
    tools:context=".AddNewEmployee">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="4dp"
            android:textAlignment="center">


            <TextView
                android:id="@+id/addNewEmployeeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/add_new_employee"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/employeeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:paddingVertical="15dp"
                android:inputType="text"
                android:hint="@string/employee_name"
                android:layout_marginHorizontal="30dp"
                android:layout_below="@id/addNewEmployeeTextView"
                />


            <EditText
                android:id="@+id/employeeAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:paddingVertical="15dp"
                android:inputType="number"
                android:hint="@string/employee_age"
                android:layout_below="@+id/employeeName"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                />

            <EditText
                android:id="@+id/employeeAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:paddingVertical="15dp"
                android:inputType="textPostalAddress"
                android:hint="@string/employee_address"
                android:layout_below="@+id/employeeAge"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                />

            <EditText
                android:id="@+id/employeeJoiningDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:paddingVertical="15dp"
                android:inputType="date"
                android:hint="@string/employee_joining_date"
                android:layout_below="@+id/employeeAddress"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                />

            <EditText
                android:id="@+id/employeeContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:paddingVertical="15dp"
                android:hint="@string/employee_phone"
                android:layout_below="@+id/employeeJoiningDate"
                android:inputType="phone"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                />

            <EditText
                android:id="@+id/employeeEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:paddingVertical="15dp"
                android:hint="@string/employee_email"
                android:inputType="textEmailAddress"
                android:layout_below="@id/employeeContact"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                />

            <EditText
                android:id="@+id/employeeSalary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:paddingVertical="15dp"
                android:hint="@string/employee_salary_8hrs"
                android:inputType="number"
                android:layout_below="@id/employeeEmail"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                />

            <EditText
                android:id="@+id/employeeDesignation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:paddingVertical="15dp"
                android:inputType="text"
                android:hint="@string/employee_designation"
                android:layout_below="@id/employeeSalary"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                />

            <Button
                android:id="@+id/addNewEmployeeBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="#673AB7"
                android:layout_below="@id/employeeDesignation"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="20dp"
                android:padding="15sp"
                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>