<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="4dp"
        android:textAlignment="center"
        tools:context=".HomeFragment">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/namaste_aniket"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcomeText"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/_24_may_2023"
            android:textSize="15sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/toBePaidCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dateTextView"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/totalPaymentInCurrentMonth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/_65475"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/total_payment"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/midSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toBePaidCard"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="2">


            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/highest_payment"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/highestPaymentInCurrentMonth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/_25461"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/lowest_payment"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/lowestPaymentInCurrentMonth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/_10250"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <Button
            android:id="@+id/addNewEmployeeActivityLinkBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/midSection"
            android:layout_centerHorizontal="true"
            android:background="#673AB7"
            android:drawableStart="@drawable/add"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:paddingHorizontal="20dp"
            android:text="@string/new_employee"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/addAttendanceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/addNewEmployeeActivityLinkBtn"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/add_attendance"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textStyle="bold" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/addAttendanceRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addAttendanceTextView"
            />

    </RelativeLayout>
</ScrollView>