<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".Registration">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center"
            >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/register"
                android:textStyle="bold"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/displayName"
                    android:layout_width="377dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:hint="Name"
                    android:drawableStart="@drawable/person"
                    android:drawablePadding="10dp"
                    android:textSize="15sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="377dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/email"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="10dp"
                    android:textSize="15sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="378dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:drawableStart="@drawable/password"
                        android:drawablePadding="10dp"
                        android:inputType="textPassword"
                        android:textSize="15sp"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/togglePasswordVisibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="end|center_vertical"
                    android:src="@drawable/ic_eye" />
            </FrameLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/purple"
                android:textSize="15sp"
                android:text="@string/register"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/loginNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/click_to_login"
                android:textSize="15sp"

                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>